2023-10-02T08:13:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6377606353 # 1947
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-02
* notice: last 14d: unq all: 92 264
* notice: prev accum: outdated-unq outdated-all / unq all: 1596 5153 / 1731 5417
* notice: next accum: outdated-unq outdated-all / unq all: 1596 5153 / 1732 5418
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-09-18 2023-10-02]

2023-10-02T00:43:34Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6374512213 # 1946
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-02
* notice: last 14d: unq all: 92 264
* notice: prev accum: outdated-unq outdated-all / unq all: 1589 5140 / 1726 5410
* notice: next accum: outdated-unq outdated-all / unq all: 1596 5153 / 1731 5417
* notice: prev exec diff / last date diff / accum: unq all: +5 +7 -0 -0 / +12 +16 -0 -0 / 12 16
* notice: removed / changed dates: [2023-09-17] / [2023-10-01]

2023-10-01T16:10:41Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6371829700 # 1945
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-01
* notice: last 14d: unq all: 89 258
* notice: prev accum: outdated-unq outdated-all / unq all: 1589 5140 / 1725 5408
* notice: next accum: outdated-unq outdated-all / unq all: 1589 5140 / 1726 5410
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -6 -11 / +7 +9 -0 -0 / 7 9
* notice: removed / changed dates: [] / [2023-09-17 2023-10-01]

2023-10-01T08:10:50Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6369166321 # 1944