@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-10-02T08:13:04Z",
+  "timestamp" : "2023-10-02T16:12:18Z",
   "count_outdated" : 5153,
   "uniques_outdated" : 1596,
-  "count" : 5418,
-  "uniques" : 1732,
+  "count" : 5419,
+  "uniques" : 1733,
   "clones" : [
     {
       "timestamp": "2023-09-18T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 1, 3 ],
-      "uniques": 2,
+      "count_decinc": [ 2, 3 ],
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2023-09-19T00:00:00Z",
@@ -133,12 +133,12 @@
     },
     {
       "timestamp": "2023-10-02T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
